nameserver/nameserver-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nameserver-dns
  namespace: nameserver
spec:
  selector:
    app: nameserver
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-proxy-tcp
      port: 5353
      protocol: TCP
      targetPort: 5353
    - name: dns-proxy-udp
      port: 5353
      protocol: UDP
      targetPort: 5353
  type: LoadBalancer
  loadBalancerClass: metallb
  loadBalancerIP: 192.168.1.53
  externalTrafficPolicy: Local
