nameserver/nameserver-webmin-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nameserver-webmin
  namespace: nameserver
spec:
  selector:
    app: nameserver
  ports:
    - name: webmin
      port: 10000
      protocol: TCP
      targetPort: 10000
  type: ClusterIP
