nameserver/service-dns.yml
apiVersion: v1
kind: Service
metadata:
  name: nameserver-dns
  annotations:
    purelb.io/service-group: default
spec:
  selector:
    app: nameserver
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
  type: LoadBalancer
  loadBalancerIP: 192.168.1.53
