nameserver/service-webmin.yml
apiVersion: v1
kind: Service
metadata:
  name: nameserver-webmin
spec:
  selector:
    app: nameserver
  ports:
    - name: webmin
      port: 10000
      targetPort: 10000
  type: ClusterIP
