nameserver/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nameserver
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ns.mdapi.ch
      secretName: nameserver-tls
  rules:
    - host: ns.mdapi.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nameserver-webmin
                port:
                  number: 10000
