nameserver/nameserver-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nameserver
  namespace: nameserver
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    flame.pawelmalak/type: app
    flame.pawelmalak/name: DNS Admin
    flame.pawelmalak/url: https://nsadmin.mdapi.ch
    flame.pawelmalak/category: Network
    flame.pawelmalak/icon: dns
    flame.pawelmalak/order: '30'
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy-admin.oauth2-proxy.svc.cluster.local/admin/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://auth.mdapi.ch/admin/oauth2/start?rd=https://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nsadmin.mdapi.ch
      secretName: nameserver-tls
  rules:
    - host: nsadmin.mdapi.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nameserver-webmin
                port:
                  number: 10000
